# logos-qt-mcp

./: .gitignore  README.md  flake.nix
mcp-server/: index.mjs  package-lock.json  package.json
qt-plugin/: CMakeLists.txt  inspectorserver.cpp  inspectorserver.h
test-framework/: framework.mjs
